--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ QUARKUS_NATIVE_RESOURCE=publicKey.pem
 # ============================================================================
 
 # POSTGRES
-QUARKUS_DATASOURCE_DB_KIND=postgresql
-QUARKUS_DATASOURCE_USERNAME=admin
-QUARKUS_DATASOURCE_PASSWORD=admin
-QUARKUS_DATASOURCE_VERTX_URL=vertx-reactive:postgresql://postgres-serv:5432/pagto-digital
+#QUARKUS_DATASOURCE_DB_KIND=postgresql
+#QUARKUS_DATASOURCE_USERNAME=admin
+#QUARKUS_DATASOURCE_PASSWORD=admin
+#QUARKUS_DATASOURCE_VERTX_URL=vertx-reactive:postgresql://postgres-serv:5432/pagto-digital
