--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,49 +1,49 @@
 # Themas
 # quarkus.swagger-ui.theme=outline
 
-quarkus.swagger-ui.theme=flattop
-quarkus.smallrye-openapi.info-title=Pagto Digital - API Transações de Faturas 
+%prod.quarkus.swagger-ui.theme=flattop
+%prod.quarkus.smallrye-openapi.info-title=Pagto Digital - API Transações de Faturas 
 
-quarkus.http.port=${QUARKUS_PORT:8080}
+%prod.quarkus.http.port=${QUARKUS_PORT:8080}
 
 # ============================================================================
 # Métricas
 # ============================================================================
-quarkus.smallrye-metrics.path=metrics
-quarkus.smallrye-metrics.extensions.enabled=true
+%prod.quarkus.smallrye-metrics.path=metrics
+%prod.quarkus.smallrye-metrics.extensions.enabled=true
 
 
 # ============================================================================
 # LOG
 # ============================================================================
-quarkus.log.level=INFO
-quarkus.log.file.enable=true
-quarkus.log.file.path=/tmp/trace.log
-quarkus.log.file.level=INFO
-quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
-quarkus.log.file.rotation.max-file-size=10M
-quarkus.log.file.rotation.max-backup-index=100
+%prod.quarkus.log.level=INFO
+%prod.quarkus.log.file.enable=true
+%prod.quarkus.log.file.path=/tmp/trace.log
+%prod.quarkus.log.file.level=INFO
+%prod.quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+%prod.quarkus.log.file.rotation.max-file-size=10M
+%prod.quarkus.log.file.rotation.max-backup-index=100
 # quarkus.log.console.color=true
-quarkus.log.syslog.enable=true
+%prod.quarkus.log.syslog.enable=true
 
 
 # ============================================================================
 # Certificados de Segurança e Chaves Simétricas
 # ============================================================================
-quarkus.http.cors=${QUARKUS_HTTP_CORS}
-quarkus.http.cors.access-control-allow-credentials=true
-quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
-quarkus.http.cors.exposed-headers=Content-Disposition
-quarkus.http.cors.access-control-max-age=24H
-quarkus.http.cors.origins=http://localhost:4200,http://localhost:9090
-quarkus.http.cors.methods=GET, POST, OPTIONS
+%prod.quarkus.http.cors=${QUARKUS_HTTP_CORS}
+%prod.quarkus.http.cors.access-control-allow-credentials=true
+%prod.quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+%prod.quarkus.http.cors.exposed-headers=Content-Disposition
+%prod.quarkus.http.cors.access-control-max-age=24H
+%prod.quarkus.http.cors.origins=http://localhost:4200,http://localhost:9090
+%prod.quarkus.http.cors.methods=GET, POST, OPTIONS
 
-quarkus.ssl.native=false
-quarkus.tls.trust-all=true
+%prod.quarkus.ssl.native=false
+%prod.quarkus.tls.trust-all=true
 
-smallrye.jwt.sign.key.location=privateKey.pem
-mp.jwt.verify.publickey.location=publicKey.pem
-quarkus.native.resources.includes=publicKey.pem
+%prod.smallrye.jwt.sign.key.location=privateKey.pem
+%prod.mp.jwt.verify.publickey.location=publicKey.pem
+%prod.quarkus.native.resources.includes=publicKey.pem
 
 #quarkus.http.auth.permission.public.paths=/q/health/*,/q/metrics/*,/q/openapi/*
 #quarkus.http.auth.permission.public.policy=authenticated
@@ -52,12 +52,12 @@ quarkus.native.resources.includes=publicKey.pem
 # ============================================================================
 # Configuração de Banco
 # ============================================================================
-quarkus.datasource.reactive.max-size=80
-quarkus.datasource.reactive.url=${QUARKUS_DATASOURCE_VERTX_URL}
-quarkus.datasource.db-kind=${QUARKUS_DATASOURCE_DB_KIND}
-quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
-quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
-quarkus.hibernate-orm.database.generation=update
+%prod.quarkus.datasource.reactive.max-size=80
+%prod.quarkus.datasource.reactive.url=${QUARKUS_DATASOURCE_VERTX_URL}
+%prod.quarkus.datasource.db-kind=${QUARKUS_DATASOURCE_DB_KIND}
+%prod.quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
+%prod.quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
+%prod.quarkus.hibernate-orm.database.generation=update
 # drop-and-create
 
 
@@ -71,3 +71,13 @@ quarkus.hibernate-orm.database.generation=update
 #quarkus.jaeger.service-name=pagtodigital-fatura-reactive
 #quarkus.jaeger.sampler-type=const
 #quarkus.jaeger.sampler-param=1
+
+
+%prod.quarkus.application.name=POC-Quarkus-Reactive 
+%prod.quarkus.opentelemetry.enabled=true 
+%prod.quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://apm:8200 
+#quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret 
+%prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
+
+# Alternative to the console log
+#quarkus.http.access-log.pattern="...traceId=%{X,traceId} spanId=%{X,spanId}"
