--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,57 @@
+# Themas
+# quarkus.swagger-ui.theme=outline
 
-#%test.quarkus.datasource.db-kind=h2
-#%test.quarkus.datasource.username=sa
-#%test.quarkus.datasource.password=
-#%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-#%test.quarkus.hibernate-orm.sql-load-script=import.sql
-# %test.quarkus.hibernate-orm.database.generation=drop-and-create
-#%test.quarkus.hibernate-orm.log.sql=true
+%test.quarkus.swagger-ui.theme=flattop
+%test.quarkus.smallrye-openapi.info-title=Pagto Digital - API Transações de Faturas 
 
-%test.quarkus.datasource.db-kind=mssql
-%test.quarkus.hibernate-orm.database.generation=drop-and-create
-%test.quarkus.hibernate-orm.sql-load-script=import.sql
+%test.quarkus.http.port=${QUARKUS_PORT:8081}
+
+# ============================================================================
+# Métricas
+# ============================================================================
+%test.quarkus.smallrye-metrics.path=metrics
+%test.quarkus.smallrye-metrics.extensions.enabled=true
+
+
+# ============================================================================
+# LOG
+# ============================================================================
+%test.quarkus.log.level=INFO
+%test.quarkus.log.file.enable=true
+%test.quarkus.log.file.path=/tmp/trace.log
+%test.quarkus.log.file.level=INFO
+%test.quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+%test.quarkus.log.file.rotation.max-file-size=10M
+%test.quarkus.log.file.rotation.max-backup-index=100
+# quarkus.log.console.color=true
+# %test.quarkus.log.syslog.enable=true
+
+
+# ============================================================================
+# Certificados de Segurança e Chaves Simétricas
+# ============================================================================
+%test.quarkus.http.cors=${QUARKUS_HTTP_CORS}
+%test.quarkus.http.cors.access-control-allow-credentials=true
+%test.quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+%test.quarkus.http.cors.exposed-headers=Content-Disposition
+%test.quarkus.http.cors.access-control-max-age=24H
+%test.quarkus.http.cors.origins=http://localhost:4200,http://localhost:9090
+%test.quarkus.http.cors.methods=GET, POST, OPTIONS
+
+%test.quarkus.ssl.native=false
+%test.quarkus.tls.trust-all=true
+
+%test.smallrye.jwt.sign.key.location=privateKey.pem
+%test.mp.jwt.verify.publickey.location=publicKey.pem
+%test.quarkus.native.resources.includes=publicKey.pem
+
+
+# ============================================================================
+# Configuração de Banco
+# ============================================================================
+#quarkus.datasource.reactive.max-size=80
+%test.quarkus.datasource.reactive.url=vertx-reactive:postgresql://127.0.0.1:5432/pagto-digital
+%test.quarkus.datasource.db-kind=postgresql
+%test.quarkus.datasource.username=admin
+%test.quarkus.datasource.password=admin
+#quarkus.hibernate-orm.database.generation=update
