--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+%prod.quarkus.application.name=POC-Quarkus-Reactive 
+
 # Themas
 # quarkus.swagger-ui.theme=outline
 
@@ -23,8 +25,7 @@
 %prod.quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
 %prod.quarkus.log.file.rotation.max-file-size=10M
 %prod.quarkus.log.file.rotation.max-backup-index=100
-# quarkus.log.console.color=true
-%prod.quarkus.log.syslog.enable=true
+%prod.quarkus.log.syslog.enable=${QUARKUS_LOG_SYSTEM_ENABLE}
 
 
 # ============================================================================
@@ -65,19 +66,19 @@
 # ==========================================================================
 # OPENTRACING
 # ==========================================================================
-#quarkus.jaeger.enabled=true
-#quarkus.jaeger.metrics.enabled=true
-#quarkus.jaeger.endpoint=http://jeager:14268/api/traces
-#quarkus.jaeger.service-name=pagtodigital-fatura-reactive
-#quarkus.jaeger.sampler-type=const
-#quarkus.jaeger.sampler-param=1
+%prod.quarkus.jaeger.enabled=${QUARKUS_JEAGER_ENABLED}
+%prod.quarkus.jaeger.metrics.enabled=${QUARKUS_JEAGER_METRICS_ENABLED}
+%prod.quarkus.jaeger.endpoint=${QUARKUS_JEAGER_ENDPOINT}
+%prod.quarkus.jaeger.service-name=${QUARKUS_JEAGER_SERVICE_NAME}
+%prod.quarkus.jaeger.sampler-type=${QUARKUS_JEAGER_SAMPLER_TYPE}
+%prod.quarkus.jaeger.sampler-param=${QUARKUS_JEAGER_SAMPLER_PARAM}
 
 
-%prod.quarkus.application.name=POC-Quarkus-Reactive 
-%prod.quarkus.opentelemetry.enabled=true 
-%prod.quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://apm:8200 
-#quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret 
+
+%prod.quarkus.opentelemetry.enabled=${QUARKUS_OPENTELEMETRY_ENABLED} 
+%prod.quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${QUARKUS_OPENTELEMETRY_OTLP_ENDPOINT}
 %prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
+#quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret 
 
 # Alternative to the console log
 #quarkus.http.access-log.pattern="...traceId=%{X,traceId} spanId=%{X,spanId}"
