--- a/.env
+++ b/.env
@@ -30,19 +30,37 @@ QUARKUS_NATIVE_RESOURCE=publicKey.pem
 QUARKUS_DATASOURCE_DB_KIND=postgresql
 QUARKUS_DATASOURCE_USERNAME=admin
 QUARKUS_DATASOURCE_PASSWORD=admin
-QUARKUS_DATASOURCE_VERTX_URL=vertx-reactive:postgresql://postgres-serv:5432/pagto-digital
+QUARKUS_DATASOURCE_VERTX_URL=vertx-reactive:postgresql://127.0.0.1:5432/pagto-digital
 
 
 # ==========================================================================
 # OPENTRACING
 # ==========================================================================
-QUARKUS_OPENTELEMETRY_ENABLED=true
+QUARKUS_OPENTELEMETRY_ENABLED=false
 QUARKUS_OPENTELEMETRY_OTLP_ENDPOINT=http://apm:8200
 
 
-QUARKUS_JEAGER_ENABLED=true
-QUARKUS_JEAGER_METRICS_ENABLED=true
+QUARKUS_JEAGER_ENABLED=false
+QUARKUS_JEAGER_METRICS_ENABLED=false
 QUARKUS_JEAGER_ENDPOINT=http://jeager:14268/api/traces
 QUARKUS_JEAGER_SERVICE_NAME=pagtodigital-fatura-reactive
 QUARKUS_JEAGER_SAMPLER_TYPE=const
 QUARKUS_JEAGER_SAMPLER_PARAM=1
+
+
+# ==========================================================================
+# KEYCLOAK 
+# ==========================================================================
+QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:7777/auth/realms/pagto-digital
+QUARKUS_OIDC_CLIENT_ID=api-service-pagto-digital
+QUARKUS_OIDC_CREDENTIALS_SECRET=mJrhiuN11XTSlwrmYk0JgGMALZjMHGCc
+QUARKUS_OIDC_TLS_VERIFICATION=none
+QUARKUS_OIDC_REALM=pagto-digital
+
+TESTE_QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:7777/auth/
+TESTE_QUARKUS_OIDC_CLIENT_ID=api-service-pagto-digital
+TESTE_QUARKUS_OIDC_CREDENTIALS_SECRET=mJrhiuN11XTSlwrmYk0JgGMALZjMHGCc
+TESTE_QUARKUS_OIDC_TLS_VERIFICATION=none
+TESTE_QUARKUS_OIDC_REALM=pagto-digital
+
+#TESTCONTAINERS_RYUK_DISABLED=true
