--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@
 %prod.quarkus.log.file.rotation.max-file-size=10M
 %prod.quarkus.log.file.rotation.max-backup-index=100
 %prod.quarkus.log.syslog.enable=${QUARKUS_LOG_SYSTEM_ENABLE}
+%dev.quarkus.log.syslog.enable=${QUARKUS_LOG_SYSTEM_ENABLE}
 
 
 # ============================================================================
@@ -42,9 +43,9 @@
 %prod.quarkus.ssl.native=false
 %prod.quarkus.tls.trust-all=true
 
-%prod.smallrye.jwt.sign.key.location=privateKey.pem
-%prod.mp.jwt.verify.publickey.location=publicKey.pem
-%prod.quarkus.native.resources.includes=publicKey.pem
+#%prod.smallrye.jwt.sign.key.location=privateKey.pem
+#%prod.mp.jwt.verify.publickey.location=publicKey.pem
+#%prod.quarkus.native.resources.includes=publicKey.pem
 
 #quarkus.http.auth.permission.public.paths=/q/health/*,/q/metrics/*,/q/openapi/*
 #quarkus.http.auth.permission.public.policy=authenticated
@@ -59,6 +60,14 @@
 %prod.quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
 %prod.quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
 %prod.quarkus.hibernate-orm.database.generation=update
+
+%dev.quarkus.datasource.reactive.max-size=80
+%dev.quarkus.datasource.reactive.url=${QUARKUS_DATASOURCE_VERTX_URL}
+%dev.quarkus.datasource.db-kind=${QUARKUS_DATASOURCE_DB_KIND}
+%dev.quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME}
+%dev.quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD}
+%dev.quarkus.hibernate-orm.database.generation=update
+
 # drop-and-create
 
 
@@ -82,3 +91,26 @@
 
 # Alternative to the console log
 #quarkus.http.access-log.pattern="...traceId=%{X,traceId} spanId=%{X,spanId}"
+
+
+# ==========================================================================
+# KEYCLOAK 
+# ==========================================================================
+%prod.quarkus.oidc.auth-server-url=${QUARKUS_OIDC_AUTH_SERVER_URL}
+%prod.quarkus.oidc.client-id=${QUARKUS_OIDC_CLIENT_ID}
+%prod.quarkus.oidc.credentials.secret=${QUARKUS_OIDC_CREDENTIALS_SECRET}
+%prod.quarkus.oidc.tls.verification=${QUARKUS_OIDC_TLS_VERIFICATION}
+
+%dev.quarkus.oidc.auth-server-url=${QUARKUS_OIDC_AUTH_SERVER_URL}
+%dev.quarkus.oidc.client-id=${QUARKUS_OIDC_CLIENT_ID}
+%dev.quarkus.oidc.credentials.secret=${QUARKUS_OIDC_CREDENTIALS_SECRET}
+%dev.quarkus.oidc.tls.verification=${QUARKUS_OIDC_TLS_VERIFICATION}
+
+
+#quarkus.swagger-ui.security-definitions=
+quarkus.keycloak.policy-enforcer.enable=true
+
+#quarkus.test.disable-containers=false
+
+quarkus.swagger-ui.always-include=true
+
