--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -55,3 +55,10 @@
 %test.quarkus.datasource.username=admin
 %test.quarkus.datasource.password=admin
 #quarkus.hibernate-orm.database.generation=update
+
+
+%test.teste.quarkus.oidc.auth-server-url=${TESTE_QUARKUS_OIDC_AUTH_SERVER_URL}
+%test.teste.quarkus.oidc.client-id=${TESTE_QUARKUS_OIDC_CLIENT_ID}
+%test.teste.quarkus.oidc.credentials.secret=${TESTE_QUARKUS_OIDC_CREDENTIALS_SECRET}
+%test.teste.quarkus.oidc.tls.verification=${TESTE_QUARKUS_OIDC_TLS_VERIFICATION}
+%test.teste.quarkus.oidc.realm=${TESTE_QUARKUS_OIDC_REALM}
