Settings in readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,8 +82,6 @@
 %prod.quarkus.jaeger.sampler-type=${QUARKUS_JEAGER_SAMPLER_TYPE}
 %prod.quarkus.jaeger.sampler-param=${QUARKUS_JEAGER_SAMPLER_PARAM}
 
-
-
 %prod.quarkus.opentelemetry.enabled=${QUARKUS_OPENTELEMETRY_ENABLED} 
 %prod.quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${QUARKUS_OPENTELEMETRY_OTLP_ENDPOINT}
 %prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
@@ -108,7 +106,7 @@
 
 
 #quarkus.swagger-ui.security-definitions=
-quarkus.keycloak.policy-enforcer.enable=true
+#quarkus.keycloak.policy-enforcer.enable=true
 
 #quarkus.test.disable-containers=false
 
